--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,15 +1,39 @@
+
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <!-- <a class="navbar-brand" href="/">Schedule Tweets</a> -->
     <%= link_to "Schedule Tweets", root_path, class: "navbar-brand" %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <%= link_to "Home", root_path, class: "nav-link" %>
-        <%= link_to "About", about_path, class: "nav-link" %>
-      </div>    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to "Home", root_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "About", about_path, class: "nav-link" %>
+        </li>
+      </ul>
+
+       <% if Current.user %>
+            <span class="navbar-text ms-auto">
+                <%= Current.user.email %>   
+            </span>
+        <% end %>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+                <% if Current.user %>
+                    <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-outline-secondary"%>
+                <% end %>
+            </li>
+            <li class="nav-item">
+                <%= link_to "Sign Up", sign_up_path, class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+                <%= link_to "Login", sign_in_path, class: "nav-link"%>
+            </li>
+        </ul>
     </div>
   </div>
 </nav>
